fixed a bug where an arrow would translate outside of the page on mobileFirst, cleaned up excess code, and made minor touchups here and there

--- a/LESS/footer.less
+++ b/LESS/footer.less
@@ -43,7 +43,7 @@ footer {
         font-size: 4rem;
         padding: 4rem;
         text-decoration: none;
-        text-shadow: purple 0px 0px 7px;
+        text-shadow:rgb(253, 0, 253) 0px 0px 3px;
     }
     
     
