--- a/LESS/homepage.less
+++ b/LESS/homepage.less
@@ -208,7 +208,7 @@ button {
 
         @media @desktop {
         border-right: .1rem solid black;
-        width: 45%;
+        width: 48%;
     }
 }
 
@@ -218,7 +218,7 @@ button {
     transition: 1s;
    
          @media @desktop {
-         width: 55%;
+         width: 52%;
     }
 }
 
@@ -231,7 +231,7 @@ button {
         border-top: .5rem solid black;
         border-bottom: .5rem solid black;
         border-right: .1rem solid black;
-        width: 55%;
+        width: 52%;
     }
 
 }
@@ -243,7 +243,7 @@ button {
         @media @desktop {
         border-top: .5rem solid black;
         border-bottom: .5rem solid black;
-        width: 45%;
+        width: 48%;
     }
 }
 
@@ -253,7 +253,7 @@ button {
 
         @media @desktop {
         border-right: .1rem solid black;
-        width: 45%;
+        width: 48%;
     }
 
 }
@@ -263,7 +263,7 @@ button {
     background: #64485C;
     
         @media @desktop {
-        width: 55%;
+        width: 52%;
         }
 }
 
